# irrigation_system_ESP

./: .gitignore  CMakeLists.txt  README.md  alex.csv  sdkconfig.old
main/: CMakeLists.txt  connect_wifi.c  dht.c  dht_task.c  lite backup.txt  main.c  send_data_task.c  ssd1306_fonts.c  ssd1306_task.c  ultrasonic.c  ultrasonic_task.c  vafantest.c  yl69.c  yl69_task.c
main/calculate_percentage_test/: CMakeLists.txt  calculate_percentage_test.c  calculate_percentage_test.cpp  calculate_percentage_test.h
main/include/: common.h  connect_wifi.h  dht_task.h  esp_adc_cal.h  send_data_task.h  ssd1306_fonts.h  ssd1306_task.h  ultrasonic.h  ultrasonic_task.h  yl69_task.h
main/pump_state_test/: CMakeLists.txt  pump_state_test.c  pump_state_test.cpp  pump_state_test.h
main/ultrasonic_unit_test/: CMakeLists.txt  ultra_test.c  ultra_test.cpp  ultra_test.h  vafantest.cpp
unit_tests/: CMakeLists.txt
